RESOLVED FIXED102582
[Soup] CredentialStorage should only be used for HTTP-family requests
https://bugs.webkit.org/show_bug.cgi?id=102582
Summary [Soup] CredentialStorage should only be used for HTTP-family requests
Martin Robinson
Reported 2012-11-16 22:03:21 PST
This is causing assertion failures on the debug bots.
Attachments
Patch (7.96 KB, patch)
2012-11-16 22:25 PST, Martin Robinson
gustavo: review+
Martin Robinson
Comment 1 2012-11-16 22:25:42 PST
Gustavo Noronha (kov)
Comment 2 2012-11-16 23:12:51 PST
Comment on attachment 174808 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=174808&action=review > Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:873 > + if (!d->m_user.isEmpty() || !d->m_pass.isEmpty()) { > + // If credentials were specified for this request, add them to the url, > + // so that they will be passed to NetworkRequest. > + KURL urlWithCredentials(firstRequest().url()); > + urlWithCredentials.setUser(d->m_user); > + urlWithCredentials.setPass(d->m_pass); > + d->m_firstRequest.setURL(urlWithCredentials); > + } This is a left over, as we discussed on IRC, otherwise looks good!
Martin Robinson
Comment 3 2012-11-17 00:04:03 PST
Note You need to log in before you can comment on or make changes to this bug.